[gd_scene load_steps=8 format=3 uid="uid://g28updgkaqym"]

[ext_resource type="PackedScene" uid="uid://bi7vr8n2y7b5" path="res://scenes/egg_shelf.tscn" id="1_ccfdg"]
[ext_resource type="Texture2D" uid="uid://yph5r4u8xt3w" path="res://art/icons/egg1.png" id="1_i1l7w"]
[ext_resource type="Script" uid="uid://6seakwoxk527" path="res://scripts/basket.gd" id="1_lg5c3"]
[ext_resource type="Script" uid="uid://br1lu1lnknnov" path="res://scripts/egg.gd" id="2_lg5c3"]
[ext_resource type="Resource" uid="uid://bo03k2xsccltr" path="res://resources/bird-one.tres" id="3_pdp4j"]
[ext_resource type="PackedScene" uid="uid://b085dkuk7uq8r" path="res://scenes/mini_menu.tscn" id="6_pdp4j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1l7w"]

[node name="Basket" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lg5c3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 657.0

[node name="Basket" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 372.0
offset_right = 778.0
offset_bottom = 567.0
color = Color(0.96779364, 0.6867659, 0.53886074, 1)

[node name="Egg1" type="Button" parent="Basket"]
layout_mode = 0
offset_left = 41.0
offset_top = 43.0
offset_right = 113.0
offset_bottom = 115.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("1_i1l7w")
script = ExtResource("2_lg5c3")
species = ExtResource("3_pdp4j")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg2" type="Button" parent="Basket"]
layout_mode = 0
offset_left = 156.0
offset_top = 19.0
offset_right = 228.0
offset_bottom = 91.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("1_i1l7w")
script = ExtResource("2_lg5c3")
species = ExtResource("3_pdp4j")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg3" type="Button" parent="Basket"]
layout_mode = 0
offset_left = 64.0
offset_top = 94.0
offset_right = 136.0
offset_bottom = 166.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("1_i1l7w")
script = ExtResource("2_lg5c3")
species = ExtResource("3_pdp4j")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg4" type="Button" parent="Basket"]
layout_mode = 0
offset_left = 129.0
offset_top = 66.0
offset_right = 201.0
offset_bottom = 138.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("1_i1l7w")
script = ExtResource("2_lg5c3")
species = ExtResource("3_pdp4j")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg5" type="Button" parent="Basket"]
layout_mode = 0
offset_left = 185.0
offset_top = 84.0
offset_right = 257.0
offset_bottom = 156.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("1_i1l7w")
script = ExtResource("2_lg5c3")
species = ExtResource("3_pdp4j")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg6" type="Button" parent="Basket"]
layout_mode = 0
offset_left = 90.0
offset_top = 18.0
offset_right = 162.0
offset_bottom = 90.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1l7w")
icon = ExtResource("1_i1l7w")
script = ExtResource("2_lg5c3")
species = ExtResource("3_pdp4j")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Mini Menu" parent="." instance=ExtResource("6_pdp4j")]
layout_mode = 0
offset_left = 802.0
offset_right = 1152.0

[node name="Egg Shelf" parent="." instance=ExtResource("1_ccfdg")]
layout_mode = 0

[connection signal="selection" from="Basket/Egg1" to="." method="_on_egg_1_selection"]
[connection signal="selection" from="Basket/Egg2" to="." method="_on_egg_2_selection"]
[connection signal="selection" from="Basket/Egg3" to="." method="_on_egg_3_selection"]
[connection signal="selection" from="Basket/Egg4" to="." method="_on_egg_4_selection"]
[connection signal="selection" from="Basket/Egg5" to="." method="_on_egg_5_selection"]
[connection signal="selection" from="Basket/Egg6" to="." method="_on_egg_6_selection"]
