extends Control


func _on_egg_1_selection(egg: Egg) -> void:
	$"Egg Shelf".add_egg(egg)
	egg.disabled = true
	egg.visible = false


func _on_egg_2_selection(egg: Egg) -> void:
	$"Egg Shelf".add_egg(egg)
	egg.disabled = true
	egg.visible = false


func _on_egg_3_selection(egg: Egg) -> void:
	$"Egg Shelf".add_egg(egg)
	egg.disabled = true
	egg.visible = false


func _on_egg_4_selection(egg: Egg) -> void:
	$"Egg Shelf".add_egg(egg)
	egg.disabled = true
	egg.visible = false


func _on_egg_5_selection(egg: Egg) -> void:
	$"Egg Shelf".add_egg(egg)
	egg.disabled = true
	egg.visible = false


func _on_egg_6_selection(egg: Egg) -> void:
	$"Egg Shelf".add_egg(egg)
	egg.disabled = true
	egg.visible = false
